<resources>
    <string name="app_name">GWorker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sample_arrival_time">8am-10am</string>
    <string name="arrival_time_lable">Arrival Time</string>
    <string name="sample_address">600 W Chicago Ave, Chicaog, IL 60654</string>
    <string name="price_label">Price {:formattedAmount}</string>
    <string name="job_details_label">Job Details</string>
    <string name="sample_contact_label">Contact {:name}</string>
    <string name="customer">Customer</string>
    <string name="update_price_label">UPDATE PRICING</string>
    <string name="view_details_label">VIEW</string>
    <string name="sample_start_time_hour">8</string>
    <string name="sample_am_pm">am</string>
    <string name="sample_end_time_hour">- {:h}</string>
    <string name="title_activity_price_update">PriceUpdateActivity</string>
    <string name="title_price_update">Update Pricing</string>
    <string name="labor_cost_label">Labor Cost</string>
    <string name="dollar_sign">$</string>
    <string name="parts_cost_label">Parts Cost</string>
    <string name="parts_price_hint">Price of Part (Include taxes)</string>
    <string name="part_name_label">Descriptive Parts Name</string>
    <string name="sample_cost">$90.00</string>
    <string name="total_price_label">Total Price</string>
    <string name="update">update</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="edit_information">Edit Information</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="home">HOME</string>
    <string name="by">by</string>
    <string name="groupon">GROUPON</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="terms">By signing in you agree to Groupon’s TERM OF USE and PRIVACY POLICY</string>
    <string name="email_password_not_null">Email address and password cannot be empty!</string>
    <string name="email_password_invalid">Email address or password not valid!</string>
    <string name="job_fetch_failure">Failed to fetch jobs, please try again later.</string>
    <string name="price_update_failure">Failed to update price, please try again later.</string>
    <string name="rating_denominator">/5.0</string>
    <string name="failure_location_sensor">Failed to fetch current location, please make sure you enable location access for GWorer in settings</string>
    <string name="add_profile_image">Add Profile Image</string>
</resources>
