<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:id="@+id/rlJobSummary"
    android:background="@drawable/border_background"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_start_time_hour"
        android:textColor="@color/large_text"
        android:id="@+id/tvStartTimeHour"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_am_pm"
        android:textColor="@color/large_text"
        android:id="@+id/tvStartTimeAMPM"
        android:layout_toRightOf="@+id/tvStartTimeHour"
        android:layout_alignBottom="@+id/tvStartTimeHour"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_end_time_hour"
        android:id="@+id/tvEndTimeHour"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvStartTimeAMPM"
        android:textSize="24sp"
        android:textColor="@color/large_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_am_pm"
        android:textColor="@color/large_text"
        android:id="@+id/tvEndTimeAMPM"
        android:layout_toRightOf="@+id/tvEndTimeHour"
        android:layout_alignBottom="@+id/tvStartTimeHour"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrival_time_lable"
        android:id="@+id/tvArrivalTimeLabel"
        android:layout_alignBottom="@+id/spnStatus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/spnStatus"
        android:layout_toStartOf="@+id/spnStatus"
        android:textAlignment="gravity" />

    <Spinner
        android:id="@+id/spnStatus"
        style="@style/spinner_style"
        android:spinnerMode="dropdown"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvStartTimeHour"
        />

    <ImageView
        android:id="@+id/ivMap"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/tvArrivalTimeLabel"
        android:layout_marginTop="24dp"
        android:padding="0dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@android:mipmap/sym_def_app_icon"
        android:background="@drawable/border_map"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_address"
        android:id="@+id/tvAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ivMap"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="10dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/border_address"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:id="@+id/separator1"
        android:visibility="visible"
        android:background="@color/border"
        android:layout_below="@+id/tvAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_label"
        android:id="@+id/tvPrice"
        android:layout_below="@+id/tvAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:id="@+id/separator2"
        android:visibility="visible"
        android:background="@color/border"
        android:layout_below="@+id/tvPrice" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job_details_label"
        android:id="@+id/tvJobDetailsLabel"
        android:layout_below="@+id/tvPrice"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:id="@+id/separator3"
        android:visibility="visible"
        android:background="@color/border"
        android:layout_below="@+id/tvJobDetailsLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_contact_label"
        android:id="@+id/tvContact"
        android:layout_below="@+id/tvJobDetailsLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_price_label"
        android:textColor="@color/theme_primary"
        android:id="@+id/tvUpdatePriceLabel"
        android:layout_alignTop="@+id/tvPrice"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_details_label"
        android:textColor="@color/theme_primary"
        android:id="@+id/tvViewDetailsLabel"
        android:layout_alignTop="@+id/tvJobDetailsLabel"
        android:layout_alignRight="@+id/separator2"
        android:layout_alignEnd="@+id/separator2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivPhone"
        android:src="@drawable/ic_phone"
        android:layout_alignTop="@+id/tvContact"
        android:layout_toLeftOf="@+id/ivMessage"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivMessage"
        android:layout_alignTop="@+id/tvContact"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_message" />

</RelativeLayout>