<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ghomebyrw.gworker.activities.AccountActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvFirstNameLabel"
        android:layout_marginTop="15dp"
        android:text="@string/first_name"
        android:textColor="@color/normal_text"
        android:textSize="13sp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etFirstName"
        android:hint="@string/first_name"
        android:textColor="@color/theme_primary"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvLastNameLabel"
        android:layout_marginTop="15dp"
        android:text="@string/last_name"
        android:textColor="@color/normal_text"
        android:textSize="13sp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/etLastName"
        android:hint="@string/last_name"
        android:textColor="@color/theme_primary"
        android:textSize="16sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvPhoneNumberLabel"
        android:layout_marginTop="15dp"
        android:text="@string/mobile_number"
        android:textColor="@color/normal_text"
        android:textSize="13sp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/etPhoneNumber"
        android:hint="@string/mobile_number"
        android:textColor="@color/theme_primary"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvEmailLabel"
        android:layout_marginTop="15dp"
        android:text="@string/email"
        android:textColor="@color/normal_text"
        android:textSize="13sp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/etEmail"
        android:hint="@string/email"
        android:textColor="@color/theme_primary"
        android:textSize="16sp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSaveProfile"
        android:layout_marginTop="15dp"
        android:textAllCaps="true"
        android:background="@color/theme_primary"
        android:textColor="#ffffff"/>
</LinearLayout>
