<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ghomebyrw.gworker.activities.AccountActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEditAction"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/edit_information"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textColor="@color/theme_primary"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvFirstNameLabel"
        android:layout_below="@+id/tvEditAction"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/first_name"
        android:textColor="@color/normal_text"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvFirstName"
        android:layout_below="@id/tvEditAction"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="16sp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:id="@+id/separator1"
        android:visibility="visible"
        android:background="@color/border"
        android:layout_below="@+id/tvFirstName"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLastNameLabel"
        android:layout_below="@+id/separator1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/last_name"
        android:textColor="@color/normal_text"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLastName"
        android:layout_below="@+id/separator1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/last_name"
        android:textSize="16sp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:id="@+id/separator2"
        android:visibility="visible"
        android:background="@color/border"
        android:layout_below="@+id/tvLastName"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPhoneNumberLabel"
        android:layout_below="@+id/separator2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/mobile_number"
        android:textColor="@color/normal_text"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPhoneNumber"
        android:layout_below="@+id/separator2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="16sp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:id="@+id/separator3"
        android:visibility="visible"
        android:background="@color/border"
        android:layout_below="@+id/tvPhoneNumber"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEmailLabel"
        android:layout_below="@+id/separator3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/email"
        android:textColor="@color/normal_text"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEmail"
        android:layout_below="@+id/separator3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="16sp"/>
</RelativeLayout>
